	  prior to the split.   OpenAL 0.0.8 and freealut 1.0.1 have been
	  tested and work.

Server:
	* Default shotspeed increased to 22 to compensate for higher average
	  ship speeds.
	* Fix unpause when baselessPausing is on.
	* Improved signal handling.
	* Revert to the old policy of allowing players to "steal" bases
	  from teammates regardless of score.

Client:
	* Improved ball message scan.  Clear color attributes of
	  out-of-date ball messages.
	* Fix a bug that made it impossible to lose items.

X11 Client only:
	* Fix bug that prevented radar colors from being set from xpilotrc.

XPilot NG XP-Replay:
	* Disable some code in color allocation function, it breaks certain
	  recordings.
	* Space key now toggles pause.

===============================================================================

This is a summary of changes of release 4.7.2 compared to release 4.7.1.

XPilot NG Control Center:
        * Some usability improvements.

SDL & X11 Client:
	* Renamed option sounds to soundFile.
	* Added boolean option sound which can be used to enable/disable the
	  sound without changing the value of the maxVolume option. Default
	  is true if sound has been compiled into the client.
	* Added option keyToggleSound which toggles the value of option
	  sound. It has no default value.
	* When using X11, only warn about Emulate3Buttons, don't disable it.

SDL Client only:
	* Fixed some memory leaks, e.g. one for HUD messages.
	* Texture bug fixes, should fix the bug in 4.7.1 where the
	  ship is painted as a white box on some machines.

X11 Client only:
	* Configure options --enable-dbe and --enable-mbx should work again.

Server:
	* Put back the old behaviour that dropped mines are immune to gravity.
	  Explanation is that they are "anchored" to the map the same way
	  as the walls are.
	* New option ballCollisionDetaches (default false):
	  Does a ball get freed by a collision with a player?
	* New option playerBallBounceBrakeFactor (default 0.7):